Remove config from tracking

--- a/confit.json.sample
+++ b/confit.json.sample
@@ -2,9 +2,9 @@
 	"SPOTIFY_ACCOUNTS_BASE_URL":"https://accounts.spotify.com",
 	"SPOTIFY_BASE_URI" : "https://api.spotify.com",
 	"REDIRECT_URI" : "http://127.0.0.1:5000/spotify_after_login",
-	"CLIENT_ID" : "a70e7896202b47d2aef770a2085f46c8",
-	"CLIENT_SECRET" : "06e7b4bad080476096789e2777b38159",
-	"YOUTUBE_API_KEY" : "AIzaSyBSAnHRzJMr0slcnUSGTsAwnFOTlZYp-yk",
+	"CLIENT_ID" : "ID",
+	"CLIENT_SECRET" : "SECRET",
+	"YOUTUBE_API_KEY" : "API_KEY",
 	"YOUTUBE_CLIENT_SECRETS_FILE" : "youtube_webapp_client_secret.json",
 	"SCOPES" : ["https://www.googleapis.com/auth/youtube.force-ssl"],
 	"API_SERVICE_NAME" : "youtube",
