--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-Flask==3.0.3
+Flask
 Requests==2.31.0
 google-api-python-client==1.7.2
 google-auth==1.8.0
 google-auth-httplib2==0.0.3
 google-auth-oauthlib==0.4.1
-
+gunicorn
